@@ -65,6 +65,7 @@ t/fiction/data/docbook/sections-a-href.docbook.xml
 t/fiction/data/docbook/sections-and-paras.docbook.xml
 t/fiction/data/docbook/sections-p-b-i-comments.docbook.xml
 t/fiction/data/docbook/with-blockquote.docbook.xml
+t/fiction/data/docbook/with-blockquote-with-lang-and-id.docbook.xml
 t/fiction/data/docbook/with-internal-description.docbook.xml
 t/fiction/data/docbook/with-programlisting.docbook.xml
 t/fiction/data/docbook/with-span.docbook.xml
@@ -85,6 +86,7 @@ t/fiction/data/proto-text/sections-and-paras.txt
 t/fiction/data/proto-text/sections-p-b-i-comments.txt
 t/fiction/data/proto-text/sections-p-b-i.txt
 t/fiction/data/proto-text/with-blockquote.txt
+t/fiction/data/proto-text/with-blockquote-with-lang-and-id.txt
 t/fiction/data/proto-text/with-internal-description.txt
 t/fiction/data/proto-text/with-programlisting.txt
 t/fiction/data/proto-text/with-span.txt
@@ -97,6 +99,7 @@ t/fiction/data/xml/sections-a-href.xml
 t/fiction/data/xml/sections-and-paras.xml
 t/fiction/data/xml/sections-p-b-i-comments.xml
 t/fiction/data/xml/sections-p-b-i.xml
+t/fiction/data/xml/with-blockquote-with-lang-and-id.xml
 t/fiction/data/xml/with-blockquote.xml
 t/fiction/data/xml/with-programlisting.xml
 t/fiction/data/xml/with-span.xml
